--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,15 @@
-# Django Settings
+# Django stuff
 SECRET_KEY=django-insecure-change-this-in-production-very-long-random-string
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database (SQLite is default, but you can override for PostgreSQL/MySQL)
-# DATABASE_URL=sqlite:///db.sqlite3
+# CORS
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-# CORS Settings (for development)
-# CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+# DB - uncomment if using postgres
+# DATABASE_URL=postgres://user:pass@localhost:5432/dbname
+
+# Gemini AI - get your key from https://aistudio.google.com/app/apikey
+GOOGLE_GEMINI_API_KEY=
 
 # Additional settings
 # TIME_ZONE=UTC
