Refactor auth, fix API key, and improve code quality

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 SECRET_KEY=django-insecure-change-this-in-production-very-long-random-string-abc123def456ghi789
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
-GOOGLE_GEMINI_API_KEY= 
+GOOGLE_GEMINI_API_KEY= ""
 # Database (SQLite is default, but you can override for PostgreSQL/MySQL)
 # DATABASE_URL=sqlite:///db.sqlite3
 
