--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,5 @@ python-decouple==3.8
 faker==20.1.0  # test data
 factory-boy==3.3.0
 reportlab==4.0.7  # pdfs
+gunicorn==21.2.0
+whitenoise==6.6.0
