--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,13 @@
+Django==4.2.11
 djangorestframework==3.14.0
-pandas==2.1.4
-python-dotenv==1.0.0
-Django==4.2.7
-psycopg2-binary==2.9.7
-google-generativeai==0.3.2  # for AI stuff
 django-cors-headers==4.3.1
-Pillow==10.1.0  # images
+python-dotenv==1.0.1
+pandas==2.2.0
+psycopg2-binary==2.9.9
+google-generativeai==0.8.3
+Pillow==10.4.0
 python-decouple==3.8
-faker==20.1.0  # test data
-factory-boy==3.3.0
-reportlab==4.0.7  # pdfs
-gunicorn==21.2.0
-whitenoise==6.6.0
+reportlab==4.2.5
+gunicorn==22.0.0
+whitenoise==6.7.0
+
